--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </main>
       <footer>
         fale concosco no instagram 
-        <a href="https://instagram.com/treineme" taget="_blank">@treine.me</a>
+        <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
       </footer>
     </div>
 
