--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
       <nav>
           <a id="logo" href="#">
-            <img src="images/logo.svg" alt="Treine-me">
+            <img src="images/logo.svg" alt="Treine.me">
           </a>
           <ul>
             <li><a href="#">Home</a></li>
